// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照测试 分钟视图 1`] = `
<div
  className="sc-AxjAm kbSqFy"
>
  <div
    className="sinoui-clock__pointer"
  />
</div>
`;

exports[`快照测试 时钟视图 1`] = `
<div
  className="sc-AxjAm dOLAZy"
>
  <div
    className="sinoui-clock__pointer"
  />
</div>
`;
